--- a/VRChat/41/1097441.html
+++ b/VRChat/41/1097441.html
@@ -77,9 +77,9 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "ocutanbot" data-product-category="188" data-product-id=
-        "1097441" data-product-list="market_show"
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="ocutanbot" data-product-category="188"
+        data-product-id="1097441" data-product-list="market_show"
         data-product-price="100" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
@@ -103,14 +103,15 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
                         <div class="u-mb-200">
                           <div class="eventname-flag">
@@ -124,8 +125,7 @@
                             </div></a>
                           </div>
                         </div>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -136,13 +136,13 @@
                             <img alt="おきゅまーと" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/4702640/icon_image/13ba9cd6-5009-493b-ba6d-96efa3f10f4c_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               おきゅまーと
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           おきゅたんbot VoicePack Vol.1
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -283,18 +283,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1097441"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "おきゅたんbot VoicePack Vol.1 | おきゅまーと"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1097441"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "おきゅたんbot VoicePack Vol.1 | おきゅまーと"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1097441"
@@ -304,7 +303,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -337,7 +336,8 @@
                         </div></a>
                       </div>
                       <section>
-                        <div class="player" data-src=
+                        <div class="player u-my-300 u-bg-400"
+                        data-src=
                         "https://s2.booth.pm/00e145f9-56bb-4d61-a781-aec554e36161/s/1097441/full/7d729402-8f05-4074-8aab-6bf1d581ddc7.mp3">
                           <div class="player_control">
                             <div class="icon-play"></div>
@@ -367,8 +367,8 @@
                       </section>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             おきゅみんのみんなから寄せられた「収録してほしいセリフ」を、「パルマ―！」とか「おきゅぅぅぅぅ！」ってどう言ったらいいの！？　と悪戦苦闘しながら深夜に収録した、おきゅたんbotの声データ集です！
                             HEARTalk用にいろんな声の高さのバリエーションが入ってたりも。
                             やってみて声優さんは本当にすごいなって思いました。ノイズも入ってるけど、あまり気にしないでね。
@@ -400,8 +400,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
