--- a/VRChat/18/1092818.html
+++ b/VRChat/18/1092818.html
@@ -77,10 +77,10 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand="lmee"
-        data-product-category="34" data-product-id="1092818"
-        data-product-list="market_show" data-product-price="0"
-        data-tracking="detail_item">
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="lmee" data-product-category="34"
+        data-product-id="1092818" data-product-list="market_show"
+        data-product-price="0" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -102,17 +102,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -123,13 +123,13 @@
                             <img alt="ばりさうんど" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/3579579/icon_image/11b179a5-95b6-4af9-912a-9e1e33ad1a0e_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               ばりさうんど
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           Mojo hands of Gentlemen LMEE Remix
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -225,18 +225,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1092818"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "Mojo hands of Gentlemen LMEE Remix | ばりさうんど"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1092818"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "Mojo hands of Gentlemen LMEE Remix | ばりさうんど"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1092818"
@@ -246,7 +245,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -267,7 +266,8 @@
                         </div></a>
                       </div>
                       <section>
-                        <div class="player" data-src=
+                        <div class="player u-my-300 u-bg-400"
+                        data-src=
                         "https://s2.booth.pm/288a298e-56f8-4e37-a187-fa6b63593237/s/1092818/full/15fd4727-476d-4af0-a618-d25133b50d86.mp3">
                           <div class="player_control">
                             <div class="icon-play"></div>
@@ -297,8 +297,8 @@
                       </section>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             VRChat、紳士Force拠点であるClub.DelicのワールドBGMをRemixした楽曲です。
                             原曲、Mojo hands of
                             Gentlemenは紳士ForceのYAMADA(@yamada_is_aniki)作のオリジナル楽曲です。
@@ -309,8 +309,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
